criei classe project com bean e dto - esta classe sera usada na us7.

--- a/MasterManager-war/web/student/student_index.xhtml
+++ b/MasterManager-war/web/student/student_index.xhtml
@@ -17,6 +17,13 @@
             <br></br>
             <br></br>
 
+            <h:link value="Ir para a minha área de projecto" outcome="student_project_management"/>
+            
+             <br></br>
+            <br></br>
+             <br></br>
+            <br></br>
+            
             <h:form>
                 <h:outputLabel for="search" value="Procurar candidatura " />
                 <h:inputText 
