alterei o upload do ficheiro para passar a usar o Document.

--- a/MasterManager-war/web/student/student_project_proposal_details.xhtml
+++ b/MasterManager-war/web/student/student_project_proposal_details.xhtml
@@ -84,7 +84,7 @@
 
                 <br/>
 
-                <h:form>
+                <h:form enctype="multipart/form-data">
                     <!--upload do ficheiro-->
                     <h:outputLabel for="message" value="Motivação: " />
                     <h:inputText
@@ -99,9 +99,9 @@
                     &nbsp;
                     <p:growl id="curriculo" showDetail="true" />
                     <p:fileUpload value="#{uploadManager.file}" mode="simple" skinSimple="true"/>
-                    <p:commandButton value="Submit" ajax="false" actionListener="#{uploadManager.upload}" >
+                    <p:commandButton value="Candidatar" ajax="false" actionListener="#{uploadManager.upload}" >
                         <f:actionListener binding="#{administratorManager.createApplication(component)}"/>
-                        <f:param name="ppcode" id="ppcode"
+                        <f:param name="code" id="code"
                                  value="#{administratorManager.currentProjectProposal.code}" />
                     </p:commandButton>
 
