o upload nao funcionava (apesar de nao dar erro) porque o id automaticamente gerado era perdido logo apos o create. Corrigido - o create (apllicationBean) agora devolve o id depois de o gerar.

--- a/MasterManager-war/web/admin/admin_publictest_update.xhtml
+++ b/MasterManager-war/web/admin/admin_publictest_update.xhtml
@@ -87,7 +87,7 @@
                     value="#{administratorManager.currentPublicTest.advisorName}"/>
                 <br></br>
 
-                <h:outputLabel for="outsideTeacherName" value="Professore de fora(Membro do Júri): " />
+                <h:outputLabel for="outsideTeacherName" value="Professor de fora(Membro do Júri): " />
                 <h:inputText
                     id="outsideTeacherName"
                     size="50"
