--- a/MasterManager-war/web/admin/admin_index.xhtml
+++ b/MasterManager-war/web/admin/admin_index.xhtml
@@ -198,7 +198,7 @@
                         &nbsp;
                         <h:commandLink value="Remover Ata" 
                                        rendered="${not empty object.documentName}"
-                                       actionListener="#{administratorManager.removePublicTest}">
+                                       actionListener="#{administratorManager.removeFileRecord}">
                             <f:param name="publicTestCode3" id="publicTestCode3"
                                      value="#{object.code}" />
                         </h:commandLink>
