Created StudentManager. Also resolved remove applications.

--- a/MasterManager-war/web/student/student_application_details.xhtml
+++ b/MasterManager-war/web/student/student_application_details.xhtml
@@ -18,53 +18,53 @@
                     <h:outputLabel for="id" value="Identificador da candidatura: " />
                     <h:outputText 
                         id="id"
-                        value="#{administratorManager.currentApplication.id}"/>
+                        value="#{studentManager.currentApplication.id}"/>
                     
                     <h:outputLabel for="applicationState" value="Estado da candidatura: " />
                     <h:outputText 
                         id="applicationState"
-                        value="#{administratorManager.currentApplication.applicationState}"/>
+                        value="#{studentManager.currentApplication.applicationState}"/>
 
                     <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
                     <h:outputText 
                         id="projectProposalCode"
-                        value="#{administratorManager.currentApplication.projectProposal.code}"/>
+                        value="#{studentManager.currentApplication.projectProposal.code}"/>
 
                     <h:outputLabel for="projectProposalTitle" value="Title da proposta: " />
                     <h:outputText 
                         id="title"
-                        value="#{administratorManager.currentApplication.projectProposal.title}"/>
+                        value="#{studentManager.currentApplication.projectProposal.title}"/>
 
                     <h:outputLabel for="projectProposalAbstract" value="Abstract da proposta: " />
                     <h:outputText 
                         id="projectProposalAbstract"
-                        value="#{administratorManager.currentApplication.projectProposal.projectAbstract}"/>
+                        value="#{studentManager.currentApplication.projectProposal.projectAbstract}"/>
 
                     <h:outputLabel for="projectProposalWorkPlan" value="WorkPlan: " />
                     <h:outputText 
                         id="workPlan"
-                        value="#{administratorManager.currentApplication.projectProposal.workPlan}"/>
+                        value="#{studentManager.currentApplication.projectProposal.workPlan}"/>
 
                     <h:outputLabel for="projectProposalWorkPlace" value="WorkPlace: " />
                     <h:outputText 
                         id="workPlace"
-                        value="#{administratorManager.currentApplication.projectProposal.workPlace}"/>
+                        value="#{studentManager.currentApplication.projectProposal.workPlace}"/>
 
 
                     <h:outputLabel for="projectProposalBudget" value="Budget: " />
                     <h:outputText 
                         id="budget"
-                        value="#{administratorManager.currentApplication.projectProposal.budget}"/>
+                        value="#{studentManager.currentApplication.projectProposal.budget}"/>
 
                     <h:outputLabel for="projectProposalProponent" value="ProponentUsername " />
                     <h:outputText 
                         id="proponent"
-                        value="#{administratorManager.currentApplication.projectProposal.proponent.name}"/>
+                        value="#{studentManager.currentApplication.projectProposal.proponent.name}"/>
 
                     <h:outputLabel for="applyingMessage" value="Mensagem de motivação: " />
                     <h:outputText 
                         id="applyingMessage"
-                        value="#{administratorManager.currentApplication.applyingMessage}"/>
+                        value="#{studentManager.currentApplication.applyingMessage}"/>
 
                     <!--MOSTRAR O NOME DO FICHEIRO QUE FOI FEITO UPLOAD-->
                     <!--MOSTRAR O ESTADO DA CANDIDATURA-->
