--- a/MasterManager-war/web/student/student_application_update.xhtml
+++ b/MasterManager-war/web/student/student_application_update.xhtml
@@ -13,48 +13,48 @@
                 <h:outputLabel for="id" value="Identificador da candidatura: " />
                 <h:outputText 
                     id="id"
-                    value="#{administratorManager.currentApplication.id}"/>
+                    value="#{studentManager.currentApplication.id}"/>
 
                 <h:outputLabel for="applicationState" value="Estado da candidatura: " />
                 <h:outputText 
                     id="applicationState"
-                    value="#{administratorManager.currentApplication.applicationState}"/>
+                    value="#{studentManager.currentApplication.applicationState}"/>
 
                 <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
                 <h:outputText 
                     id="projectProposalCode"
-                    value="#{administratorManager.currentApplication.projectProposal.code}"/>
+                    value="#{studentManager.currentApplication.projectProposal.code}"/>
 
                 <h:outputLabel for="projectProposalTitle" value="Titulo da proposta: " />
                 <h:outputText 
                     id="projectProposalTitle"
-                    value="#{administratorManager.currentApplication.projectProposal.title}"/>
+                    value="#{studentManager.currentApplication.projectProposal.title}"/>
 
                 <h:outputLabel for="projectProposalAbstract" value="Abstract da proposta: " />
                 <h:outputText 
                     id="projectProposalAbstract"
-                    value="#{administratorManager.currentApplication.projectProposal.projectAbstract}"/>
+                    value="#{studentManager.currentApplication.projectProposal.projectAbstract}"/>
 
                 <h:outputLabel for="projectProposalWorkPlan" value="WorkPlan: " />
                 <h:outputText 
                     id="projectProposalWorkPlan"
-                    value="#{administratorManager.currentApplication.projectProposal.workPlan}"/>
+                    value="#{studentManager.currentApplication.projectProposal.workPlan}"/>
 
                 <h:outputLabel for="projectProposalWorkPlace" value="WorkPlace: " />
                 <h:outputText 
                     id="projectProposalWorkPlace"
-                    value="#{administratorManager.currentApplication.projectProposal.workPlace}"/>
+                    value="#{studentManager.currentApplication.projectProposal.workPlace}"/>
 
 
                 <h:outputLabel for="projectProposalBudget" value="Budget: " />
                 <h:outputText 
                     id="projectProposalBudget"
-                    value="#{administratorManager.currentApplication.projectProposal.budget}"/>
+                    value="#{studentManager.currentApplication.projectProposal.budget}"/>
 
                 <h:outputLabel for="projectProposalProponent" value="ProponentUsername " />
                 <h:outputText 
                     id="projectProposalProponent"
-                    value="#{administratorManager.currentApplication.projectProposal.proponent.name}"/>
+                    value="#{studentManager.currentApplication.projectProposal.proponent.name}"/>
 
                 <br></br>
 
@@ -67,16 +67,16 @@
                     size="52"
                     required="true"
                     requiredMessage="Error: A mensagem não pode estar vazia."                            
-                    value="#{administratorManager.currentApplication.applyingMessage}" >
+                    value="#{studentManager.currentApplication.applyingMessage}" >
                 </h:inputText>    
                 <h:message for="message" errorStyle="color: red" />
                 
                 <h:outputLabel for="document" value="Documentos: " />
                         <h:outputText 
                             id="document"
-                            value="#{administratorManager.currentApplication.documentName}">
+                            value="#{studentManager.currentApplication.documentName}">
                             <f:param name="applicationId" id="applicationId"
-                                     value="#{administratorManager.currentApplication.id}" />
+                                     value="#{studentManager.currentApplication.id}" />
                         </h:outputText>
                         <br></br>
                 
@@ -85,7 +85,7 @@
                 <h:commandButton
                     id="submit"
                     value="Actualizar"
-                    action="#{administratorManager.updateApplication}" />
+                    action="#{studentManager.updateApplication}" />
                 <h:message for="submit" style="color: red"/>
 
 
