--- a/MasterManager-war/web/student/student_application_update.xhtml
+++ b/MasterManager-war/web/student/student_application_update.xhtml
@@ -80,7 +80,12 @@
                         </h:outputText>
                         <br></br>
                 
-               
+               <h:commandLink value="Remover ficheiro" 
+                               rendered="${not empty administratorManager.currentApplication.documentName}"
+                               actionListener="#{administratorManager.removeDocumentApplication}">
+                    <f:param name="applicationIdf" id="applicationIdf"
+                             value="#{administratorManager.currentApplication.id}" />
+                </h:commandLink>
 
                 <h:commandButton
                     id="submit"
