--- a/MasterManager-war/web/admin/admin_serialization.xhtml
+++ b/MasterManager-war/web/admin/admin_serialization.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:em="http://xmlns.jcp.org/jsf/composite/emcomp">
-    <ui:composition template="./templates/skeleton.xhtml">
+    <ui:composition template="../templates/skeleton.xhtml">
         <ui:define name="title">CCP</ui:define>
         <ui:define name="main">
             <em:dt
@@ -17,7 +17,7 @@
                 <p:column headerText="Acções">
                     <h:form>
                         <h:commandLink value="Atribuir"
-                                       actionListener="#{administratorManager.removeStudent}">
+                                       actionListener="#{administratorManager.approveApplication}">
                             <f:param name="applicationId" id="applicationId"
                                      value="#{object.id}" />
                         </h:commandLink>
