corrigido cirar canddiatura - agora com upload de vários ficheiros

--- a/MasterManager-war/web/student/student_project_proposal_details.xhtml
+++ b/MasterManager-war/web/student/student_project_proposal_details.xhtml
@@ -98,8 +98,13 @@
                     <br/>
                     
                     <p:growl id="curriculo" showDetail="true" />
-                    <p:fileUpload value="#{uploadManager.file}" mode="simple" skinSimple="true"/>
-                    <p:commandButton value="Candidatar" ajax="false" actionListener="#{uploadManager.upload}" >
+                    <p:fileUpload value="#{uploadManager1.fileCv}" mode="simple" skinSimple="true"/>
+                     <p:growl id="presentationLetter" showDetail="true" />
+                     <p:fileUpload value="#{uploadManager1.filePresentationLetter}" mode="simple" skinSimple="true"/>
+                     <p:growl id="certificate" showDetail="true" />
+                     <p:fileUpload value="#{uploadManager1.fileCertificate}" mode="simple" skinSimple="true"/>
+                    
+                    <p:commandButton value="Candidatar" ajax="false" actionListener="#{uploadManager1.uploadFiles}" >
                         <f:actionListener binding="#{administratorManager.createApplication(component)}"/>
                         <f:param name="code" id="code"
                                  value="#{administratorManager.currentProjectProposal.code}" />
