--- a/MasterManager-war/web/proponent/search_project_proposal.xhtml
+++ b/MasterManager-war/web/proponent/search_project_proposal.xhtml
@@ -12,22 +12,22 @@
             <em:dt 
                 title="Propostas de projecto encontradas" 
                headers="#{['Código', 'Tipo de projecto', 'Título']}"
-                props="#{['code', 'projectType', 'title']}"
-                list="#{administratorManager.getSearchProjectProposal('all')}">
+                props="#{['code', 'projectTypeString', 'title']}"
+                list="#{proponentManager.getSearchProjectProposal('all')}">
                 <p:column headerText="Acções">
                     <h:form>
                         <h:commandLink value="Detalhes" action="project_proposals_details?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentProjectProposal}" value="#{object}" />
+                                target="#{proponentManager.currentProjectProposal}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Actualizar" action="project_proposals_update?facesredirect=true">
                             <f:setPropertyActionListener
-                                target="#{administratorManager.currentProjectProposal}" value="#{object}" />
+                                target="#{proponentManager.currentProjectProposal}" value="#{object}" />
                         </h:commandLink>
                         &nbsp;
                         <h:commandLink value="Remover"
-                                       actionListener="#{administratorManager.removeProjectProposal}">
+                                       actionListener="#{proponentManager.removeProjectProposal}">
                             <f:param name="projectProposalCode" id="projectProposalCode"
                                      value="#{object.code}" />
                         </h:commandLink>
