--- a/MasterManager-war/web/proponent/project_proposals_update.xhtml
+++ b/MasterManager-war/web/proponent/project_proposals_update.xhtml
@@ -42,7 +42,7 @@
                     size="52"
                     required="true"
                     requiredMessage="Error: Proponente cannot be empty."                            
-                    value="#{administratorManager.currentProjectProposal.proponent.name}" >
+                    value="#{administratorManager.currentProjectProposal.proponentUsername}" >
                 </h:inputText>    
                 <h:message for="proponent" errorStyle="color: red" />
 
