--- a/MasterManager-war/web/student/student_application_update.xhtml
+++ b/MasterManager-war/web/student/student_application_update.xhtml
@@ -9,61 +9,60 @@
     <h:head>
         <title>CCP</title>
     </h:head>
-    <h:body>
-        <h:form enctype="multipart/form-data">                  
-            <h:panelGrid columns="2">
+    <h:body>          
+        <h:panelGrid columns="2">
 
-                <h:outputLabel for="id" value="Identificador da candidatura: " />
-                <h:outputText 
-                    id="id"
-                    value="#{studentManager.currentApplication.id}"/>
+            <h:outputLabel for="id" value="Identificador da candidatura: " />
+            <h:outputText 
+                id="id"
+                value="#{studentManager.currentApplication.id}"/>
 
-                <h:outputLabel for="applicationState" value="Estado da candidatura: " />
-                <h:outputText 
-                    id="applicationState"
-                    value="#{studentManager.currentApplication.applicationState}"/>
+            <h:outputLabel for="applicationState" value="Estado da candidatura: " />
+            <h:outputText 
+                id="applicationState"
+                value="#{studentManager.currentApplication.applicationState}"/>
 
-                <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
-                <h:outputText 
-                    id="projectProposalCode"
-                    value="#{studentManager.currentApplication.projectProposal.code}"/>
+            <h:outputLabel for="projectProposalCode" value="Código da proposta de projecto: " />
+            <h:outputText 
+                id="projectProposalCode"
+                value="#{studentManager.currentApplication.projectProposal.code}"/>
 
-                <h:outputLabel for="projectProposalTitle" value="Titulo da proposta: " />
-                <h:outputText 
-                    id="projectProposalTitle"
-                    value="#{studentManager.currentApplication.projectProposal.title}"/>
+            <h:outputLabel for="projectProposalTitle" value="Titulo da proposta: " />
+            <h:outputText 
+                id="projectProposalTitle"
+                value="#{studentManager.currentApplication.projectProposal.title}"/>
 
-                <h:outputLabel for="projectProposalAbstract" value="Abstract da proposta: " />
-                <h:outputText 
-                    id="projectProposalAbstract"
-                    value="#{studentManager.currentApplication.projectProposal.projectAbstract}"/>
+            <h:outputLabel for="projectProposalAbstract" value="Abstract da proposta: " />
+            <h:outputText 
+                id="projectProposalAbstract"
+                value="#{studentManager.currentApplication.projectProposal.projectAbstract}"/>
 
-                <h:outputLabel for="projectProposalWorkPlan" value="WorkPlan: " />
-                <h:outputText 
-                    id="projectProposalWorkPlan"
-                    value="#{studentManager.currentApplication.projectProposal.workPlan}"/>
+            <h:outputLabel for="projectProposalWorkPlan" value="WorkPlan: " />
+            <h:outputText 
+                id="projectProposalWorkPlan"
+                value="#{studentManager.currentApplication.projectProposal.workPlan}"/>
 
-                <h:outputLabel for="projectProposalWorkPlace" value="WorkPlace: " />
-                <h:outputText 
-                    id="projectProposalWorkPlace"
-                    value="#{studentManager.currentApplication.projectProposal.workPlace}"/>
+            <h:outputLabel for="projectProposalWorkPlace" value="WorkPlace: " />
+            <h:outputText 
+                id="projectProposalWorkPlace"
+                value="#{studentManager.currentApplication.projectProposal.workPlace}"/>
 
 
-                <h:outputLabel for="projectProposalBudget" value="Budget: " />
-                <h:outputText 
-                    id="projectProposalBudget"
-                    value="#{studentManager.currentApplication.projectProposal.budget}"/>
+            <h:outputLabel for="projectProposalBudget" value="Budget: " />
+            <h:outputText 
+                id="projectProposalBudget"
+                value="#{studentManager.currentApplication.projectProposal.budget}"/>
 
-                <h:outputLabel for="projectProposalProponent" value="ProponentUsername " />
-                <h:outputText 
-                    id="projectProposalProponent"
-                    value="#{studentManager.currentApplication.projectProposal.proponent.name}"/>
+            <h:outputLabel for="projectProposalProponent" value="ProponentUsername " />
+            <h:outputText 
+                id="projectProposalProponent"
+                value="#{studentManager.currentApplication.projectProposal.proponent.name}"/>
 
-                <br></br>
+        </h:panelGrid>  
 
-                <br></br>
+        <h:form enctype="multipart/form-data">        
+            <h:panelGrid columns="4">
 
-                <!--campos a editar -->
                 <h:outputLabel for="message" value="Mensagem de motivação: " />
                 <h:inputText
                     id="message"
@@ -73,58 +72,36 @@
                     value="#{studentManager.currentApplication.applyingMessage}" >
                 </h:inputText>    
                 <h:message for="message" errorStyle="color: red" />
+                <br></br>
 
                 <h:outputLabel for="cv" value="Currículo: " />
                 <h:outputText 
                     id="cv"
                     value="#{studentManager.currentApplication.cvName}">
                 </h:outputText>
+                <h:selectBooleanCheckbox value="#{studentManager.replaceCV}"
+                                         id="checkBoxReplaceCV">Substituir CV</h:selectBooleanCheckbox>
                 <br></br>
-                <h:commandLink value="Remover" 
-                               actionListener="#{studentManager.removeCv}">
-                    <f:param name="applicationIdCv" id="applicationIdCv"
-                             value="#{studentManager.currentApplication.id}" />
-                    <f:param name="name" id="nameCv"
-                             value="#{studentManager.currentApplication.cvName}" />
-                    <f:param name="index" id="indexCv"
-                             value="0" />
-                </h:commandLink>
 
-                <br></br>
-                <h:outputLabel for="newCv" value="Anexar Currículo" />
+                <h:outputLabel for="newCv" value="Anexar Currículo" id="lblFileCV"/>
+                <p:fileUpload value="#{uploadManager1.fileCv}" mode="simple" skinSimple="true" id="fuCV"/>
                 <p:growl id="newCv" showDetail="true" />
-                <p:fileUpload value="#{uploadManager1.fileCv}" mode="simple" skinSimple="true"/>
-
 
                 <br></br>
                 <br></br>
 
-
-
-
-
-
-                <br></br>
-
-                <h:outputLabel for="resentationLetter" value="Carta de Apresentação " />
+                <h:outputLabel for="presentationLetter" value="Carta de Apresentação " />
                 <h:outputText 
                     id="presentationLetter"
                     value="#{studentManager.currentApplication.presentationLetterName}">
                 </h:outputText>
+                <h:selectBooleanCheckbox value="#{studentManager.replacePL}"
+                                         id="checkBoxReplacePL">Substituir Carta de Apresentação</h:selectBooleanCheckbox>
                 <br></br>
-                <h:commandLink value="Remover" 
-                               actionListener="#{studentManager.removePresentationLetter}">
-                    <f:param name="applicationId" id="applicationIdRemovePL"
-                             value="#{studentManager.currentApplication.id}" />
-                    <f:param name="name" id="namePL"
-                             value="#{studentManager.currentApplication.presentationLetterName}" />
-                    <f:param name="index" id="indexPL"
-                             value="1" />
-                </h:commandLink>
 
-                <h:outputLabel for="newPresentationLetter" value="Anexar Carta de Apresentação" />
+                <h:outputLabel for="newPresentationLetter" value="Anexar Carta de Apresentação" id="lblFilePL"/>
+                <p:fileUpload value="#{uploadManager1.filePresentationLetter}" mode="simple" skinSimple="true" id="fuPL"/>
                 <p:growl id="newPresentationLetter" showDetail="true" />
-                <p:fileUpload value="#{uploadManager1.filePresentationLetter}" mode="simple" skinSimple="true"/>
 
                 <br></br>
                 <br></br>
@@ -134,24 +111,16 @@
                     id="certificate"
                     value="#{studentManager.currentApplication.certificateName}">
                 </h:outputText>
+                <h:selectBooleanCheckbox value="#{studentManager.replaceCert}"
+                                         id="checkBoxReplaceCert">Substituir Certificado</h:selectBooleanCheckbox>
                 <br></br>
-                <h:commandLink value="Remover" 
-                               actionListener="#{studentManager.removeCertificate}">
-                    <f:param name="applicationIdCertificate" id="applicationIdRemoveCert"
-                             value="#{studentManager.currentApplication.id}" />
-                    <f:param name="name" id="nameCert"
-                             value="#{studentManager.currentApplication.certificateName}" />
-                    <f:param name="index" id="indexCert"
-                             value="2" />
-                </h:commandLink>
-                <h:outputLabel for="newCertificate" value="Anexar Certificado" />
+
+                <h:outputLabel for="newCertificate" value="Anexar Certificado"  id="lblFileCert"/>
+                <p:fileUpload value="#{uploadManager1.fileCertificate}" mode="simple" skinSimple="true" id="fuCert"/>
                 <p:growl id="newCertificate" showDetail="true" />
-                <p:fileUpload value="#{uploadManager1.fileCertificate}" mode="simple" skinSimple="true"/>
 
                 <br></br>
                 <br></br>
-
-                <!--vou ter que fazer metodos para anexar outros documentos -->
 
 
                 <h:commandButton
@@ -167,6 +136,9 @@
         <h:messages errorStyle="color: red" />      
 
         <h:link value="Voltar" outcome="student_index"/>
+
+
+        <h:outputScript library="js" name="updateApplication.js" />
 
     </h:body>
 </html>
