--- a/MasterManager-war/web/admin/admin_serialization.xhtml
+++ b/MasterManager-war/web/admin/admin_serialization.xhtml
@@ -24,6 +24,9 @@
                     </h:form>
                 </p:column>
             </em:dt>
+            
+            <h:link value="Return" outcome="admin_index"/>
+            
         </ui:define>
     </ui:composition>
 </html>
