Now using only uploadManager.

--- a/MasterManager-war/web/student/student_application_update.xhtml
+++ b/MasterManager-war/web/student/student_application_update.xhtml
@@ -84,7 +84,7 @@
                 <br></br>
 
                 <h:outputLabel for="newCv" value="Anexar Currículo" id="lblFileCV"/>
-                <p:fileUpload value="#{uploadManager1.fileCv}" mode="simple" skinSimple="true" id="fuCV"/>
+                <p:fileUpload value="#{uploadManager.fileCv}" mode="simple" skinSimple="true" id="fuCV"/>
                 <p:growl id="newCv" showDetail="true" />
 
                 <br></br>
@@ -100,7 +100,7 @@
                 <br></br>
 
                 <h:outputLabel for="newPresentationLetter" value="Anexar Carta de Apresentação" id="lblFilePL"/>
-                <p:fileUpload value="#{uploadManager1.filePresentationLetter}" mode="simple" skinSimple="true" id="fuPL"/>
+                <p:fileUpload value="#{uploadManager.filePresentationLetter}" mode="simple" skinSimple="true" id="fuPL"/>
                 <p:growl id="newPresentationLetter" showDetail="true" />
 
                 <br></br>
@@ -116,7 +116,7 @@
                 <br></br>
 
                 <h:outputLabel for="newCertificate" value="Anexar Certificado"  id="lblFileCert"/>
-                <p:fileUpload value="#{uploadManager1.fileCertificate}" mode="simple" skinSimple="true" id="fuCert"/>
+                <p:fileUpload value="#{uploadManager.fileCertificate}" mode="simple" skinSimple="true" id="fuCert"/>
                 <p:growl id="newCertificate" showDetail="true" />
 
                 <br></br>
